Adjusted for use on standard IDE's.

--- a/PassAdviser/templates/register.html
+++ b/PassAdviser/templates/register.html
@@ -14,10 +14,10 @@
   </head>
   <body class="bg-nav">
     <p style="margin-left: 10px;">
-      <a href="https://cs50.harvard.edu/x/2020/" class="navbar-brand text-light">CS50x Final Project</a>
+      <a href="https://github.com/hsallaku/Pass-Adviser" class="navbar-brand text-light" target="_blank">Haki Sallaku© / Github Link</a>
     </p>
 
-    <div class="container" style="margin-top:150px">
+    <div class="container" style="margin-bottom:150px">
       <div class="row">
         <div class="col-md-8 mt-100">
           <h1 class="text-light display-4" style="font-size:80px">Bring safety to your online presence with PassAdviser</h1>
